<resources>
    <string name="app_name">WELCOME TO EDU</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email"> username  </string>
    <string name="prompt_password">   Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="level">Level</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">SIGNUP</string>
    <string name="departement">Departement</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Don\'t have an account? Sign Up</string>
    <string name="login">LOGIN</string>
    <string name="faculityid">FaculityID</string>
    <string name="studentspic">StudentsPic</string>
    <string name="student_id">Student ID</string>
    <string name="view">View</string>
    <string name="student_info">Student Information</string>
</resources>