<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp_Student">


    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="346dp"
        android:layout_height="258dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:contentDescription="@string/studentspic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/student_and_teacher" />




    <EditText
        android:layout_below="@id/imageView12"
        android:id="@+id/FullName_Teacher_PlaneText"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:layout_marginLeft="50dp"
        android:importantForAutofill="no" />


    <EditText
        android:layout_below="@id/imageView12"
        android:layout_toRightOf="@id/FullName_Teacher_PlaneText"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/userName_Teacher_PlaneText"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/FullName_Teacher_PlaneText"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/Department_Teacher_PlaneText"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_below="@id/userName_Teacher_PlaneText"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/Password_Teacher_Text"
        android:background="@drawable/circle"
        android:gravity="center"
        android:hint="@string/departement"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/Password_Teacher_Text" />

    <EditText
        android:id="@+id/FaculityID_PlaneText"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_below="@id/Password_Teacher_Text"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:hint="@string/faculityid"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/Password_Teacher_Text"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_below="@id/FullName_Teacher_PlaneText"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/Email_Teacher_Planetext"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_below="@id/Department_Teacher_PlaneText"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/Password_Teacher_Text"
        android:layout_toRightOf="@id/FaculityID_PlaneText"
        android:background="@drawable/circle"
        android:gravity="center"
        android:hint="Email"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />



    <Button
        android:id="@+id/SignUp_Teacher_Button"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_below="@id/imageView12"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/circle"
        android:text="@string/signup" />




</RelativeLayout>