<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="164dp"
        android:layout_height="140dp"
        android:layout_marginStart="-50dp"
        android:layout_marginLeft="-50dp"
        android:layout_marginTop="-30dp"
        app:srcCompat="@drawable/circle_blue" />


    <ImageView
        android:id="@+id/imageView6"
        android:layout_marginTop="-90dp"
        android:layout_width="295dp"
        android:layout_height="298dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/username_editext_login"
            android:layout_width="285dp"
            android:layout_height="55dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/password_editext_login"
            android:layout_width="285dp"
            android:layout_height="55dp"
            android:background="@drawable/circle"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="@string/password" />


        <Button
            android:id="@+id/login_button"
            android:layout_width="285dp"
            android:layout_height="55dp"
            android:background="@drawable/circle"
            android:layout_marginTop="20dp"
            android:text="@string/action_sign_in" />




        <TextView
            android:id="@+id/signUp_textview"
            android:layout_width="295dp"
            android:layout_height="38dp"
            android:text="@string/sign_up"
            android:layout_marginTop="20dp"
            android:textColor="#A235B5">

        </TextView>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="103dp"
        android:layout_height="130dp"
        android:layout_marginStart="350dp"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="-70dp"
        app:srcCompat="@drawable/circle_purpule" />


</LinearLayout>